# mpclient

./: CMakeLists.txt  LICENSE  README.md
3rd/google/protobuf/: CMakeLists.txt  config.h  config_linux.h
3rd/gtest/: CMakeLists.txt  gtest-death-test.cc  gtest-port.cc  gtest.cc
include/: httphelper.h  jsonhelper.h  mpclient.h  mpcomm.h  mpmsg.pb.h
proto/: mpmsg.proto
sample/: CMakeLists.txt  sample_all.cpp  sample_basic.cpp  sample_error.cpp  sample_init.cpp  sample_media.cpp  sample_menu.cpp  sample_message.cpp  sample_template.cpp  sample_thread.cpp  sample_threads2.cpp  sample_user.cpp
src/: CMakeLists.txt  httphelper.cpp  jsonhelper.cpp  metadata.cpp  metadata.h  mpclient.cpp  mpcomm.cpp  mpmsg.pb.cc  simplelogger.cpp  simplelogger.h
unittest/: CMakeLists.txt  unittest_basic.cpp  unittest_comm.cpp  unittest_media.cpp  unittest_menu.cpp  unittest_message.cpp  unittest_template.cpp  unittest_user.cpp
